syntax = "proto3";
option swift_prefix="Proto";


message OperationID {
    int64 lamport = 1;
    bytes peerID = 2; //UUID to 16 bytes
}
//TODO: later optimise representation to e.g. 2 x int64


//message BaseOperation {
//    OperationID parentID = 3;
////    OperationID attributeID = 4; // TODO: it's not always needed so maybe handcraft the objects
//}

message ObjectOperation {
    int32 version = 1;
    int64 lamport = 2;
    int32 rawType = 3;
    repeated DeleteOperation deleteOperations = 4;
    repeated AttributeOperation attributeOperations = 5;
    repeated ObjectOperation objectOperations = 6;
}

message AttributeOperation {
    int32 version = 1;
    int64 lamport = 2;
    string name = 3;
    int32 rawType = 4;
    repeated DeleteOperation deleteOperations = 5;
    repeated LWWOperation lwwOperations = 6;
    repeated StringInsertOperation stringInsertOperations = 7;
}

message DeleteOperation {
    int32 version = 1;
    int64 lamport = 2;
}

message LWWOperation {
    int32 version = 1;
    int64 lamport = 2;
    oneof value {
        int64 int = 3;
        float float = 4;
        double date = 5;
        bool boolean = 6;
        string string = 7;
    }
    repeated DeleteOperation deleteOperations = 8;
}

message StringInsertOperation {
    int32 version = 1;
    int64 lamport = 2;
    string contribution = 3;
    repeated DeleteOperation deleteOperations = 4;
    repeated StringInsertOperation stringInsertOperations = 5;
}

message OperationsTree {
    OperationID parentID = 1;
    oneof value {
        ObjectOperation objectOperation = 2;
        AttributeOperation attributeOperation = 3;
        DeleteOperation deleteOperation = 4;
        LWWOperation lwwOperation = 5;
        StringInsertOperation stringInsertOperation = 6;
    }
}

// tree of operations
message OperationsForest {
    int32 version = 1;
    bytes peerID = 2; //it's a sender device ID
    repeated OperationsTree trees = 3;
}
